--- a/m3s-service/src/test/resources/m3s-service-test.properties
+++ b/m3s-service/src/test/resources/m3s-service-test.properties
@@ -1,4 +1,6 @@
-# Just for testing (ARA or ATTA) Be carefull if you write ATTA insted of ARA, because it could cause changes on production DB 
+# Just for testing (ARA or ATTA) Be carefull if you write ATTA insted of 
+# ARA, because it could cause changes on production DB 
+
 # Agent Manager
 agent_manager=ARAAgentManager
 importation_manager=importationManager
