minor modifications needed to run the service/* junit tests

--- a/m3s-service/src/test/resources/m3s-service-test.properties
+++ b/m3s-service/src/test/resources/m3s-service-test.properties
@@ -1,16 +1,15 @@
-# Just for testing (ARA or ATTA) Be carefull if you write ATTA insted of 
-# ARA, because it could cause changes on production DB 
+# Just for testing (postgres m3s database only)
 
 # Agent Manager
-agent_manager=ARAAgentManager
+agent_manager=M3SAgentManager
 importation_manager=importationManager
 media_attibute_manager=mediaAttributeManager
 message_manager=messageManager
 security_manager=securityManager
-site_manager=ARASiteManager
+site_manager=siteManager
 statistics_manager=statisticsManager
-taxonomy_manager=ARATaxonomyManager
-import_from_file=ARAImportFromFile
-metadata_manager=ARAMetadataManager
-import_thread=ARAImportThread
-search_manager=ARASearchManager
+taxonomy_manager=taxonomyManager
+import_from_file=importFromFile
+metadata_manager=metadataManager
+import_thread=importThread
+search_manager=searchManager
